k8s/dt-consolidated-api.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dt-configmanagement

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dt-consolidation-api
  namespace: dt-configmanagement
 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dtapi
  template:
    metadata:
      name: dtapi
      labels:
        app: dtapi
    spec:
      containers:
        - name: tenantmanager
          image: 360performance/tenantmanager:1.0
          volumeMounts:
            - name: cfg-tenantmanager
              mountPath: "/config/config.json"
              subPath: config.json
              readOnly: true
        - name: apiproxy
          image: 360performance/apiproxy:1.0
          volumeMounts:
            - name: htpasswd
              mountPath: "/etc/nginx/htpasswd"
              subPath: htpasswd
              readOnly: true
        - name: apigateway
          image: 360performance/apigateway:1.0
        - name: tenantcache
          image: 360performance/tenantcache:1.0

      volumes:
        - name: cfg-tenantmanager
          secret:
            secretName: cfg-tenantmanager
        - name: htpasswd
          secret:
            secretName: htpasswd

---
apiVersion: v1
kind: Service
metadata:
  name: dtapi
  namespace: dt-configmanagement
spec:
  type: ClusterIP
  selector:
    app: dtapi
  ports:
    - protocol: TCP
      name: https
      port: 4443
      targetPort: 4443
    - protocol: TCP
      name: http
      port: 4080
      targetPort: 4080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dtapi
  namespace: dt-configmanagement
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: dtapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dtapi
            port:
              number: 4080
  - host: dtapi.dy.natrace.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dtapi
            port:
              number: 4080
